fix match design on iphone

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -82,11 +82,14 @@
 
   .match-confirmed-content{
     display:flex;
-    justify-content:center;
+    justify-content:space-around;
+    flex-direction: column;
     align-items:center;
     height:90%;
     text-align: center;
+
   }
+
 
   i {
     color:white;
